6. Services With Observables
You refactored data access to the HeroService class.
You provided the HeroService in the root AppModule so that it can be injected anywhere.
You used Angular Dependency Injection to inject it into a component.
You gave the HeroService get data method an asynchronous signature.
You discovered Observable and the RxJS Observable library.
You used RxJS of() to return an Observable of mock heroes (Observable<Hero[]>).
The component's ngOnInit lifecycle hook calls the HeroService method, not the constructor.
You created a MessageService for loosely-coupled communication between classes.
The HeroService injected into a component is created with another injected service, MessageService.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>{{title}}</h1>
 <!--Remember that app-heroes is the element selector for the HeroesComponent.-->
 <app-heroes></app-heroes>
+<app-messages></app-messages>
